# Ely

./: .autotools  .cproject  .gitignore  .project  AUTHORS  BaseApplication.cpp  BaseApplication.h  ChangeLog  Doxyfile  Example.cpp  Example.h  INSTALL  Makefile.am  NEWS  OGRE-CMakeCache.txt  Ogre3DBeginnerGuide-VertexShader.glsl  Ogre3DBeginnerGuide-VertexShader2.glsl  Ogre3DBeginnerGuide.particle  Ogre3DBeginnersGuide-FragmentShader.glsl  Ogre3DBeginnersGuide-FragmentShader5.glsl  Ogre3DBeginnersGuide-FragmentShader6.glsl  Ogre3DBeginnersGuide.compositor  Ogre3DBeginnersGuide.material  README  SelectionBox.cpp  SelectionBox.h  Terrain-texture-howto.abw  TutorialApplication.cpp  TutorialApplication.h  config.prc  configure.ac  game.xml  main.cpp  main.h  ogre.cfg  plugins.cfg  plugins_d.cfg  quakemap_d.cfg  resources.cfg  resources_d.cfg  (+1 more)
data/: Makefile.am  config.prc.in  game.xml.in
data/models/: Makefile.am
data/sounds/: Makefile.am
data/textures/: Makefile.am
ely/: Ely.cpp  Ely.h  Ely_ini.h.in  Makefile.am  config.prc.in  game.xml.in
ely/callbacks/: Makefile.am  common_configs.cpp  common_configs.h
ely/data/: Makefile.am
ely/initializations/: Makefile.am  common_configs.cpp  common_configs.h
ely/instanceupdates/: Makefile.am  common_configs.cpp  common_configs.h
ely/transitions/: Makefile.am  common_configs.cpp  common_configs.h
elygame/: Ely.cpp  Ely.h  Ely_ini.h.in  Makefile.am  config.prc.in  elygame.cpp  elygame.h  elygame_memory_pools.cpp  game.xml.in
elygame/callbacks/: Makefile.am  common_configs.cpp  common_configs.h
elygame/initializations/: Makefile.am  common_configs.cpp  common_configs.h
elygame/instanceupdates/: Makefile.am  common_configs.cpp  common_configs.h
elygame/transitions/: Makefile.am  common_configs.cpp  common_configs.h
include/: ComponentSuite.h  Ely.h  Game.h  GameComponentTemplate.h  GameObject.h  GameObjectComponent.h  Makefile.am  Utilitiy.h
include/AIComponents/: CrowdAgent.h  CrowdAgentTemplate.h  NavMesh.h  NavMeshTemplate.h  OpenSteerPlugIn.h  OpenSteerPlugInTemplate.h  OpenSteerVehicle.h  OpenSteerVehicleTemplate.h  SteerPlugIn.h  SteerPlugInTemplate.h  SteerVehicle.h  SteerVehicleTemplate.h  Steering.h  SteeringTemplate.h
include/AudioComponents/: Listener.h  ListenerTemplate.h  Sound3d.h  Sound3dTemplate.h
include/BehaviorComponents/: Activity.h  ActivityTemplate.h
include/BehavioralComponents/: Activity.h  ActivityTemplate.h
include/CommonComponents/: Default.h  DefaultTemplate.h  GameConfig.h  GameConfigTemplate.h
include/ControlComponents/: Chaser.h  ChaserTemplate.h  Driver.h  DriverTemplate.h
include/Framework/: AdvancedOgreFramework.h  AppStateManager.h  DotSceneLoader.h  GameState.h  GameStateManager.h  MenuState.h  PauseState.h  PlayState.h  rapidxml.h
include/Game/: AdvancedOgreFramework.h  AppState.h  Component.h  ComponentTemplateManager.h  DotSceneLoader.h  Ely.h  ElyApp.h  Game.h  GameAIManager.h  GameAudioManager.h  GameBehaviorManager.h  GameControlManager.h  GameGUIManager.h  GameInputManager.h  GameManager.h  GameObject.h  GamePhysicsManager.h  GameSceneManager.h  Object.h  ObjectTemplateManager.h  rapidxml.h
include/Graphics/: ModelComponent.h
include/GraphicsComponents/: InstanceOf.h  InstanceOfTemplate.h  Model.h  ModelTemplate.h
include/InputComponents/: ControlByEvent.h  ControlByEventTemplate.h
include/ObjectModel/: Component.h  ComponentTemplate.h  ComponentTemplateManager.h  Object.h  ObjectComponent.h  ObjectTemplate.h  ObjectTemplateManager.h
include/PhysicsComponents/: Character.h  CharacterController.h  CharacterControllerTemplate.h  CharacterTemplate.h  Ghost.h  GhostTemplate.h  RigidBody.h  RigidBodyTemplate.h  SoftBody.h  SoftBodyTemplate.h  Vehicle.h  VehicleTemplate.h
include/PhysicsControlComponents/: CharacterController.h  CharacterControllerTemplate.h  Vehicle.h  VehicleTemplate.h
include/SceneComponents/: InstanceOf.h  InstanceOfTemplate.h  Model.h  ModelTemplate.h  NodePathWrapper.h  NodePathWrapperTemplate.h  Terrain.h  TerrainTemplate.h
include/Support/: Audio3DManager.h  FSM.h  FirstPersonCamera.h  Picker.h  Raycaster.h
include/Utilities/: AddressTranslator.h  BinarySerializer.h  ComponentSuite.h  FastDelegateBind.h  Message.h  MessageList.h  MessageScheduler.h  NonCopyable.h  Prerequisites.h  Serializable.h  Serializer.h  Singleton.h  Tools.h  Tools_ini.h.in  fastdelegate.h
include/utilities/: UtilitiesPrerequisites.h
initializations/: Makefile.am  all_configs.h  common_configs.cpp  common_configs.h  initialization_defs.cpp  initialization_defs.h
initializations/common/: start_end.cpp
initializations/defs/: Plane1.cpp  Player1.cpp  Steerer1.cpp  Terrain1.cpp  camera.cpp  course2.cpp  initialization_defs.cpp
src/: Ely.cpp  Game.cpp  GameComponentTemplate.cpp  GameObject.cpp  GameObjectComponent.cpp  Makefile.am
src/AIComponents/: CrowdAgent.cpp  CrowdAgentTemplate.cpp  Makefile.am  NavMesh.cpp  NavMeshTemplate.cpp  OpenSteerPlugIn.cpp  OpenSteerPlugInTemplate.cpp  OpenSteerVehicle.cpp  OpenSteerVehicleTemplate.cpp  SteerPlugIn.cpp  SteerPlugInTemplate.cpp  SteerVehicle.cpp  SteerVehicleTemplate.cpp  Steering.cpp  SteeringTemplate.cpp
src/AudioComponents/: Listener.cpp  ListenerTemplate.cpp  Makefile.am  Sound3d.cpp  Sound3dTemplate.cpp
src/BehaviorComponents/: Activity.cpp  ActivityTemplate.cpp  Makefile.am
src/BehavioralComponents/: Activity.cpp  ActivityTemplate.cpp
src/CommonComponents/: Default.cpp  DefaultTemplate.cpp  GameConfig.cpp  GameConfigTemplate.cpp  Makefile.am
src/ControlComponents/: Chaser.cpp  ChaserTemplate.cpp  Driver.cpp  DriverTemplate.cpp  Makefile.am
src/Framework/: AppStateManager.cpp  (+7 more)
test/: .gitignore  Makefile.am  Runner.cpp
training/: Makefile.am  ai.cpp  anim.cpp  draw_geometry.cpp  fsm.cpp  generic_test.cpp  manual_example.cpp  memory_pool.cpp  meshdrawer.cpp  network.cpp  nodepath_test.cpp  octree.cpp  particles.cpp  pgGUI.cpp  physics.cpp  raknet.cpp  recastnavigation.cpp  render-to-texture.cpp  rocket.cpp  terrain_sample.cpp  test_wo_local_scale.cpp  threads.cpp  training.cpp
(+992 files in other folders)
