ACLOCAL_AMFLAGS = -I m4

DIST_SUBDIRS = include tinyxml2 src doc ely

if BOOST_TEST
BOOSTTESTDIR = src/test
endif 

if TRAINING
TRAININGDIR = training
endif 

# if !BOOST_TEST and !TRAINING then ELY_ELF 
if ELY_ELF
ELYELFDIRS = $(DIST_SUBDIRS)
endif 

SUBDIRS = $(BOOSTTESTDIR) $(TRAININGDIR) $(ELYELFDIRS) 
