bullet_headers = \
		Support/BulletLocal/bulletAllHitsRayResult.h \
		Support/BulletLocal/bulletBaseCharacterControllerNode.h \
		Support/BulletLocal/bulletBodyNode.h \
		Support/BulletLocal/bulletBoxShape.h \
		Support/BulletLocal/bulletCapsuleShape.h \
		Support/BulletLocal/bulletCharacterControllerNode.h \
		Support/BulletLocal/bulletClosestHitRayResult.h \
		Support/BulletLocal/bulletClosestHitSweepResult.h \
		Support/BulletLocal/bulletConeShape.h \
		Support/BulletLocal/bulletConeTwistConstraint.h \
		Support/BulletLocal/bulletConstraint.h \
		Support/BulletLocal/bulletContactCallbackData.h \
		Support/BulletLocal/bulletContactCallbacks.h \
		Support/BulletLocal/bulletContactResult.h \
		Support/BulletLocal/bulletConvexHullShape.h \
		Support/BulletLocal/bulletConvexPointCloudShape.h \
		Support/BulletLocal/bulletCylinderShape.h \
		Support/BulletLocal/bulletDebugNode.h \
		Support/BulletLocal/bulletFilterCallbackData.h \
		Support/BulletLocal/bulletGenericConstraint.h \
		Support/BulletLocal/bulletGhostNode.h \
		Support/BulletLocal/bulletHeightfieldShape.h \
		Support/BulletLocal/bulletHelper.h \
		Support/BulletLocal/bulletHingeConstraint.h \
		Support/BulletLocal/bullet_includes.h \
		Support/BulletLocal/bulletManifoldPoint.h \
		Support/BulletLocal/bulletMinkowskiSumShape.h \
		Support/BulletLocal/bulletMultiSphereShape.h \
		Support/BulletLocal/bulletPersistentManifold.h \
		Support/BulletLocal/bulletPlaneShape.h \
		Support/BulletLocal/bulletRigidBodyNode.h \
		Support/BulletLocal/bulletRotationalLimitMotor.h \
		Support/BulletLocal/bulletShape.h \
		Support/BulletLocal/bulletSliderConstraint.h \
		Support/BulletLocal/bulletSoftBodyConfig.h \
		Support/BulletLocal/bulletSoftBodyControl.h \
		Support/BulletLocal/bulletSoftBodyMaterial.h \
		Support/BulletLocal/bulletSoftBodyNode.h \
		Support/BulletLocal/bulletSoftBodyShape.h \
		Support/BulletLocal/bulletSoftBodyWorldInfo.h \
		Support/BulletLocal/bulletSphereShape.h \
		Support/BulletLocal/bulletSphericalConstraint.h \
		Support/BulletLocal/bulletTickCallbackData.h \
		Support/BulletLocal/bulletTranslationalLimitMotor.h \
		Support/BulletLocal/bulletTriangleMesh.h \
		Support/BulletLocal/bulletTriangleMeshShape.h \
		Support/BulletLocal/bullet_utils.h \
		Support/BulletLocal/bulletVehicle.h \
		Support/BulletLocal/bulletWheel.h \
		Support/BulletLocal/bulletWorld.h \
		Support/BulletLocal/config_bullet.h		

librocket_headers = \
		Support/LibRocketLocal/config_rocket.h \
		Support/LibRocketLocal/rocketSystemInterface.h \
		Support/LibRocketLocal/rocketInputHandler.h \
		Support/LibRocketLocal/rocketRegion.h \
		Support/LibRocketLocal/rocketFileInterface.h \
		Support/LibRocketLocal/rocketRegion.I \
		Support/LibRocketLocal/rocketRenderInterface.h
		
opensteer_headers = \
		Support/OpenSteerLocal/common.h \
		Support/OpenSteerLocal/DrawMeshDrawer.h \
		Support/OpenSteerLocal/PlugIn_Boids.h \
		Support/OpenSteerLocal/PlugIn_MultiplePursuit.h \
		Support/OpenSteerLocal/PlugIn_OneTurning.h \
		Support/OpenSteerLocal/PlugIn_Pedestrian.h \
		Support/OpenSteerLocal/PlugIn_Soccer.h \
		Support/OpenSteerLocal/PlugIn_CaptureTheFlag.h \
		Support/OpenSteerLocal/PlugIn_LowSpeedTurn.h \
		Support/OpenSteerLocal/PlugIn_MapDrive.h \
		Support/OpenSteerLocal/SimpleVehicle.h

recastnavigation_headers = \
		Support/RecastNavigationLocal/common.h \
		Support/RecastNavigationLocal/InputGeom.h \
		Support/RecastNavigationLocal/ChunkyTriMesh.h \
		Support/RecastNavigationLocal/MeshLoaderObj.h \
		Support/RecastNavigationLocal/DebugInterfaces.h \
		Support/RecastNavigationLocal/PerfTimer.h \
		Support/RecastNavigationLocal/NavMeshType.h \
		Support/RecastNavigationLocal/NavMeshType_Tile.h \
		Support/RecastNavigationLocal/NavMeshType_Solo.h \
		Support/RecastNavigationLocal/NavMeshType_Obstacle.h \
		Support/RecastNavigationLocal/fastlz.h \
		Support/RecastNavigationLocal/ConvexVolumeTool.h \
		Support/RecastNavigationLocal/CrowdTool.h \
		Support/RecastNavigationLocal/OffMeshConnectionTool.h
	
tinyxml2_headers = \
		Support/tinyxlm2/tinyxml2.h
		
noinst_HEADERS = \
		AIComponents/CrowdAgent.h \
		AIComponents/CrowdAgentTemplate.h \
		AIComponents/NavMesh.h \
		AIComponents/NavMeshTemplate.h \
		AIComponents/SteerPlugIn.h \
		AIComponents/SteerPlugInTemplate.h \
		AIComponents/SteerVehicle.h \
		AIComponents/SteerVehicleTemplate.h \
		AudioComponents/Listener.h \
		AudioComponents/ListenerTemplate.h \
		AudioComponents/Sound3d.h \
		AudioComponents/Sound3dTemplate.h \
		BehaviorComponents/Activity.h \
		BehaviorComponents/ActivityTemplate.h \
		CommonComponents/Default.h \
		CommonComponents/DefaultTemplate.h \
		CommonComponents/GameConfig.h \
		CommonComponents/GameConfigTemplate.h \
		ControlComponents/Chaser.h \
		ControlComponents/ChaserTemplate.h \
		ControlComponents/Driver.h \
		ControlComponents/DriverTemplate.h \
		Game/GameAIManager.h \
		Game/GameAudioManager.h \
		Game/GameBehaviorManager.h \
		Game/GameControlManager.h \
		Game/GameManager.h \
		Game/GamePhysicsManager.h \
		Game/GameSceneManager.h \
		ObjectModel/Component.h \
		ObjectModel/ComponentTemplate.h \
		ObjectModel/ComponentTemplateManager.h \
		ObjectModel/Object.h \
		ObjectModel/ObjectTemplate.h \
		ObjectModel/ObjectTemplateManager.h \
		PhysicsComponents/Ghost.h \
		PhysicsComponents/GhostTemplate.h \
		PhysicsComponents/RigidBody.h \
		PhysicsComponents/RigidBodyTemplate.h \
		PhysicsComponents/SoftBody.h \
		PhysicsComponents/SoftBodyTemplate.h \
		PhysicsControlComponents/CharacterController.h \
		PhysicsControlComponents/CharacterControllerTemplate.h \
		PhysicsControlComponents/Vehicle.h \
		PhysicsControlComponents/VehicleTemplate.h \
		SceneComponents/InstanceOf.h \
		SceneComponents/InstanceOfTemplate.h \
		SceneComponents/Model.h \
		SceneComponents/ModelTemplate.h \
		SceneComponents/NodePathWrapper.h \
		SceneComponents/NodePathWrapperTemplate.h \
		SceneComponents/Terrain.h \
		SceneComponents/TerrainTemplate.h \
		Support/FSM.h \
		Support/Picker.h \
		Support/Raycaster.h \
		Support/Distributed/ClientRepositoryBase.h \
		Support/Distributed/DistributedObjectBase.h \
		$(bullet_headers) \
		$(librocket_headers) \
		$(opensteer_headers) \
		$(recastnavigation_headers) \
		$(tinyxml2_headers) \
		Utilities/ComponentSuite.h \
		Utilities/Tools.h

nodist_noinst_HEADERS =\
		config.h

	